# amrl-manipulator

./: .gitignore  README.md
arka-arm-controller/: CMakeLists.txt  README.md  package.xml
arka-arm-controller/launch/: manipulator_controller.launch
arka-arm-controller/src/: manipulator_controller.py
arka-arm-moveit-config/: .setup_assistant
arka-arm-moveit-config/config/: controllers.yaml  fake_controllers.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
arka-arm-moveit-config/launch/: arka_urdf_di_moveit_controller_manager.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo2.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  planning_context.launch  run_benchmark_ompl.launch  trajectory_execution.launch.xml  warehouse.launch
arka-manipulator/: .gitignore  CMakeLists.txt  package.xml  requirements.txt
arka-manipulator/cfg/: ManipulatorJoy.cfg
arka-manipulator/config/: arka_jog_arm_config.yaml  joy_config.yaml  joy_new_config.yaml  manipulator_joy.yaml  manual_calibration.yaml
arka-manipulator/launch/: feedback.launch  manual.launch  semi.launch  semi_jog_arm.launch
arka-manipulator/msg/: ManipulatorData.msg
arka-manipulator/src/: joint_state_pub.py  joy_manipulator_arka.py  manipulator.py  manipulator_protocol.py
arka-manipulator/yamlcon/: joint_thresholds.yaml
arka_arm_moveit_config/: CMakeLists.txt  package.xml
arka_arm_moveit_config/config/: arka_urdf_di.srdf  joint_limits.yaml  kinematics.yaml
arka_arm_moveit_config/launch/: demo_gazebo.launch  (+11 more)
